Bug 61797 - QUERYDESIGN limit window: ESCape key does not abort the change
Summary: QUERYDESIGN limit window: ESCape key does not abort the change
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-04 15:30 UTC by Lionel Elie Mamane
Modified: 2013-03-10 17:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lionel Elie Mamane 2013-03-04 15:30:57 UTC
In query design mode, enter a value in the LIMIT box (rightmost element of the default toolbar). Do not move out of the box. Hit the "ESCape" key on the keyboard.

Actual behaviour: nothing happens

Expected behaviour: cancel change, go back to old value

Compare to behaviour of "Font Size" Box in writer, where the Esc key cancels the changes.
Comment 1 Joel Madero 2013-03-04 16:10:49 UTC
Again, marking as NEW. Let us know is you want independent confirmation of this but core devs get the benefit of the doubt ;)

Should we assign you to this one since it's a database bug?
Comment 2 Lionel Elie Mamane 2013-03-04 16:54:18 UTC
(In reply to comment #1)
> Should we assign you to this one since it's a database bug?

No, I assigned it to Zolnai since he recently added this feature. My hope was that he would take care of it :)
Comment 3 Commit Notification 2013-03-09 07:26:53 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=33933867b0e4488423ad35068d5a1ad673e9b4a3

fdo#61797 ESCape abort changes and grab focus



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.