fdo#61797 ESCape abort changes and grab focus

Handling of hitting enter or escape are only
usefull for toolbar element.
In a dialog these keys have other meanings
(close the dialog with/without saving)

Change-Id: Ifbe5d36daab9c0702b888a58403dc170082fc32d